Move per-slide video to a single static background

--- a/www_admin/slideviewer/index.html
+++ b/www_admin/slideviewer/index.html
@@ -28,17 +28,14 @@
       {
         var section = $super(options);
         var video = new Element("video",{ autoplay: "autoplay", muted: "muted" , loop: "loop", src: "loop3_slides_yuv420.mp4" });
-        //video.play();
         section.insertBefore( video, section.down(".container") );
         return section;
       }
     });
 
-    
-
     document.observe("dom:loaded",function(){
       var hash = location.search.toQueryParams();
-      var ws = new WuhuSlideSystemWithVideo({
+      var ws = new WuhuSlideSystem({
         width: hash.width || 1920,
         height: hash.height || 1080,
         prizegivingStyle: hash.prizegivingStyle || 'bars',
@@ -51,6 +48,8 @@
   <body>
 
     <div class="reveal">
+
+      <video id="slidevideo" src="loop3_slides_yuv420.mp4" muted autoplay loop></video>
 
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
