MB25: Include privacy policy link.

--- a/www_party/template.html
+++ b/www_party/template.html
@@ -55,7 +55,7 @@
   <footer id="footer">
       
     <div>
-      <small>Powered by <a href="https://wuhu.function.hu/">Wuhu</a></small>
+      <small>Powered by <a href="https://wuhu.function.hu/">Wuhu</a>.</small>
       <div>
         <details role="list"">
           <summary aria-haspopup="listbox">Theme</summary>
