--- a/www_admin/slideviewer/index.html
+++ b/www_admin/slideviewer/index.html
@@ -27,7 +27,7 @@
       insertSlide:function( $super, options )
       {
         var section = $super(options);
-        var video = new Element("video",{ autoplay: "autoplay", muted: "muted" , loop: "loop", src: "loop3_slides_yuv420.mp4" });
+        var video = new Element("video",{ autoplay: "autoplay", muted: "muted" , loop: "loop", src: "mb25loop.mp4" });
         section.insertBefore( video, section.down(".container") );
         return section;
       }
@@ -49,7 +49,7 @@
 
     <div class="reveal">
 
-      <video id="slidevideo" src="loop3_slides_yuv420.mp4" muted autoplay loop></video>
+      <video id="slidevideo" src="mb25loop.mp4" muted autoplay loop></video>
 
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
